--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>ToDo List Inicial</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ToDo List Inicial</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-
-<body>
-
-  <section class="container">
-    <h1>Minha Lista</h1>
+  <body>
+    <section class="container">
+      <h1>Minha Lista</h1>
       <p>
-        <input type="text" name="itemInput" id="itemInput">
+        <input type="text" name="itemInput" id="itemInput" />
         <button id="sendButton">✅</button>
       </p>
-
-    <ul id="todoList"></ul>
-
-  </section>
-
-  <script src="./assets/js/main.js"></script>
-</body>
-
+      <ul id="todoList"></ul>
+    </section>
+    <script src="./assets/js/main.js"></script>
+  </body>
 </html>
